@@ -25,6 +25,27 @@ jQuery(function($) {
 	}
 
 	/**
+	 * Change combobox color according selected option.
+	 */
+	$('.input.select').each(function() {
+		var comboBox = $(this),
+			changeClass = function(obj) {
+				if (obj.find('option.not-monitored:selected').length > 0) {
+					obj.addClass('not-monitored');
+				}
+				else {
+					obj.removeClass('not-monitored');
+				}
+			};
+
+		comboBox.change(function() {
+			changeClass($(this));
+		});
+
+		changeClass(comboBox);
+	});
+
+	/**
 	 * Handles host pop up menus.
 	 */
 	$(document).on('click', '.menu-host', function(event) {
