@@ -139,10 +139,10 @@ $r_form = new CForm('get');
 
 $options = array(
 	'groups' => array(
-		'monitored_hosts' => 1,
+		'real_hosts' => true,
 	),
 	'hosts' => array(
-		'monitored_hosts' => 1,
+		'with_monitored_items' => true
 	),
 	'hostid' => get_request('hostid', null),
 	'groupid' => get_request('groupid', null),
@@ -156,7 +156,6 @@ $r_form->addItem(array(SPACE._('Host').SPACE, $pageFilter->getHostsCB(true)));
 
 $latest_wdgt->addHeader(_('Items'), $r_form);
 //-------------
-
 /************************* FILTER **************************/
 /***********************************************************/
 $filterForm = new CFormTable(null, null, 'get');
@@ -207,7 +206,7 @@ elseif ($pageFilter->hostsSelected) {
 }
 
 $hosts = API::Host()->get(array(
-	'output' => array('name', 'hostid'),
+	'output' => array('name', 'hostid', 'status'),
 	'hostids' => $availableHostIds,
 	'with_monitored_items' => true,
 	'selectScreens' => API_OUTPUT_COUNT,
@@ -417,7 +416,9 @@ foreach ($applications as $appid => $dbApp) {
 	// host JS menu link
 	$hostSpan = null;
 	if ($_REQUEST['hostid'] == 0) {
-		$hostSpan = new CSpan($host['name'], 'link_menu menu-host');
+		$hostSpan = new CSpan($host['name'],
+			'link_menu menu-host'.(($host['status'] == HOST_STATUS_NOT_MONITORED) ? ' not-monitored' : '')
+		);
 		$scripts = $hostScripts[$host['hostid']];
 		$hostSpan->setAttribute('data-menu', hostMenuData($host, $scripts));
 		$hostSpan = new CDiv($hostSpan);
@@ -540,7 +541,9 @@ foreach ($hosts as $hostId => $dbHost) {
 	// host JS menu link
 	$hostSpan = null;
 	if ($_REQUEST['hostid'] == 0) {
-		$hostSpan = new CSpan($host['name'], 'link_menu menu-host');
+		$hostSpan = new CSpan($host['name'],
+			'link_menu menu-host'.(($host['status'] == HOST_STATUS_NOT_MONITORED) ? ' not-monitored' : '')
+		);
 		$scripts = $hostScripts[$host['hostid']];
 		$hostSpan->setAttribute('data-menu', hostMenuData($host, $scripts));
 		$hostSpan = new CDiv($hostSpan);
